<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_tasks"
        app:layout_constraintBottom_toTopOf="@id/homeusername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.275" />


    <TextView
        android:id="@+id/homeusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/username"
        app:layout_constraintTop_toBottomOf="@id/team"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="154dp" />

    <TextView
        android:id="@+id/team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/TeamName"
        app:layout_constraintTop_toBottomOf="@id/account"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="176dp" />

    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:text="@string/account"
        app:layout_constraintTop_toBottomOf="@id/textview_first"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="69dp" />

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:text="@string/add_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_second" />

    <Button
        android:id="@+id/button_task_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Task Details 1"
        app:layout_constraintTop_toBottomOf="@id/button_task_details1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_task_details1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Task Details 2"
        app:layout_constraintTop_toBottomOf="@id/button_task_details2" />

    <Button
        android:id="@+id/button_task_details2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Task Details 3"
        app:layout_constraintTop_toBottomOf="@id/button_settings" />

    <Button
        android:id="@+id/mainsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/botton_shape"
        android:text="Sign Out"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        tools:layout_editor_absoluteX="295dp"
        tools:layout_editor_absoluteY="560dp" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        app:layout_constraintTop_toBottomOf="@id/task_activity" />

    <Button
        android:id="@+id/task_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tasks Activity"
        app:layout_constraintTop_toBottomOf="@id/button_second" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="150dp"
        android:text="@string/all_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first" />

</androidx.constraintlayout.widget.ConstraintLayout>