<resources>
    <string name="app_name">TaskMaster</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_task">Add Task</string>
    <string name="settings">Settings</string>
    <string name="all_task">All Tasks</string>
    <string name="image_decs">Image Desc</string>
    <string name="username">User Name</string>
    <string name="my_tasks">My tasks</string>
    <string name="task_title">Task Title</string>
    <string name="task_desc">Task Description</string>
    <string name="total">Total Tasks : 0</string>
    <string name="save">Save</string>
    <string name="go_home">Go Home</string>

    <string name="lorem_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="title_activity_task_details">TaskDetailsActivity</string>
    <string name="team">Team</string>
    <string name="TeamName">Team Name</string>
    <string name="account">Account</string>

    <string-array name="team_names_array">
        <item>Team 1</item>
        <item>Team 2</item>
        <item>Team 3</item>
    </string-array>

</resources>