...
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="username"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setting"/>




    <Button
        android:id="@+id/setting"
...
